--- a/server/app/static/css/workout_start.css
+++ b/server/app/static/css/workout_start.css
@@ -25,19 +25,23 @@
   overflow: hidden;
 }
 
-/* Устанавливаем высоту и поведение для десктопов */
 .video-wrap video {
   display: block;
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: auto;
+  object-fit: contain; /* Видео полностью помещается в контейнер */
+  padding-top: 10%; /* Добавляем отступ сверху */
+  padding-bottom: 10%; /* Добавляем отступ снизу */
+  transform: scale(0.9); /* Уменьшаем видео для уменьшения обрезания */
+  transform-origin: center; /* Центрируем точку масштабирования */
 }
 
-/* Специальный стиль для мобильных устройств */
+/* Применяем только для мобильных устройств */
 @media (max-width: 768px) {
   .video-wrap video {
-      transform: scale(0.8) translateY(-10%); /* Уменьшаем и сдвигаем вверх только на телефоне */
-      transform-origin: center; /* Центрируем точку масштабирования */
+      padding-top: 15%; /* Увеличиваем верхний отступ на мобильных */
+      padding-bottom: 15%; /* Увеличиваем нижний отступ на мобильных */
+      transform: scale(0.85); /* Уменьшаем видео ещё немного на мобильных */
   }
 }
 
