--- a/server/app/static/css/style.css
+++ b/server/app/static/css/style.css
@@ -1966,41 +1966,41 @@ a {
   .workout-video-page .video-wraper {
     position: relative;
     padding: 15px;
-  }
+}
 
-  .workout-video-page .video-wraper .workout-name-wrap {
+.workout-video-page .video-wraper .workout-name-wrap {
     height: 100%;
     gap: 10px;
     justify-content: space-between;
-  }
+}
 
-  .workout-video-page .video-wraper .workout-name-wrap h5 {
+.workout-video-page .video-wraper .workout-name-wrap h5 {
     font-size: 12px;
-  }
+}
 
-  .workout-video-page .video-wraper .workout-name-wrap .video-wrap {
+.workout-video-page .video-wraper .workout-name-wrap .video-wrap {
     height: 400px;
-  }
+    overflow: hidden;
+}
 
-  .workout-video-page .video-wraper .workout-name-wrap .video-wrap video {
+/* Убедитесь, что video не обрезается и адаптируется для мобильных */
+.workout-video-page .video-wraper .workout-name-wrap .video-wrap video {
     width: 100%;
     height: 100%;
-    -o-object-fit: cover;
-    object-fit: cover;
-  }
+    object-fit: contain; /* Используем contain, чтобы полностью вписать видео */
+}
 
-  .workout-video-page .video-wraper .workout-name-wrap .video-wrap img {
-    width: 100%;
-    height: 100%;
-    -o-object-fit: cover;
-    object-fit: cover;
-  }
+/* Для мобильных устройств */
+@media (max-width: 768px) {
+    .workout-video-page .video-wraper .workout-name-wrap .video-wrap {
+        height: 300px; /* Уменьшаем высоту контейнера на мобильных */
+    }
 
-  .workout-video-page .video-wraper .workout-name-wrap .btn {
-    width: -moz-fit-content;
-    width: fit-content;
-    padding: 12.5px 20px;
-  }
+    .workout-video-page .video-wraper .workout-name-wrap .video-wrap video {
+        transform: scale(0.85); /* Уменьшаем видео, чтобы полностью поместить его */
+        transform-origin: top;
+    }
+}
 
   .profile-page {
     padding-top: 30px;
