--- a/server/app/static/css/style.css
+++ b/server/app/static/css/style.css
@@ -1978,16 +1978,38 @@ a {
     font-size: 12px;
   }
 
+  /* Общие стили для видео-контейнера и видео */
+.workout-video-page .video-wraper .workout-name-wrap .video-wrap {
+  height: 400px;
+  overflow: hidden;
+}
+
+.workout-video-page .video-wraper .workout-name-wrap .video-wrap .video-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.workout-video-page .video-wraper .workout-name-wrap .video-wrap .video-container video {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+/* Специальные стили для горизонтального режима на телефоне */
+@media (max-width: 1024px) and (orientation: landscape) {
   .workout-video-page .video-wraper .workout-name-wrap .video-wrap {
-    height: 400px;
+      height: 250px; /* Уменьшаем высоту контейнера для горизонтального режима */
   }
 
-  .workout-video-page .video-wraper .workout-name-wrap .video-wrap video {
-    width: 100%;
-    height: 100%;
-    -o-object-fit: cover;
-    object-fit: cover;
+  .workout-video-page .video-wraper .workout-name-wrap .video-wrap .video-container {
+      transform: scale(0.85); /* Сжимаем видео до 85% от его исходного размера */
+      transform-origin: center; /* Центрируем масштабирование */
   }
+}
+
 
   .workout-video-page .video-wraper .workout-name-wrap .video-wrap img {
     width: 100%;
