--- a/server/app/static/css/style.css
+++ b/server/app/static/css/style.css
@@ -1978,24 +1978,15 @@ a {
     font-size: 12px;
   }
 
-  /* Общие стили для контейнера и видео */
   .workout-video-page .video-wraper .workout-name-wrap .video-wrap {
     height: 400px;
-    overflow: hidden;
   }
 
-  .workout-video-page .video-wraper .workout-name-wrap .video-wrap .video-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  .workout-video-page .video-wraper .workout-name-wrap .video-wrap video {
     width: 100%;
     height: 100%;
-  }
-
-  .workout-video-page .video-wraper .workout-name-wrap .video-wrap .video-container video {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+    -o-object-fit: cover;
+    object-fit: cover;
   }
 
   .workout-video-page .video-wraper .workout-name-wrap .video-wrap img {
