--- a/server/app/static/css/style.css
+++ b/server/app/static/css/style.css
@@ -860,7 +860,7 @@ a {
 
 .workout-video-page .video-wraper {
   position: relative;
-  padding: 30px;
+  padding: 50px;
 }
 
 .workout-video-page .video-wraper .workout-name-wrap {
@@ -883,6 +883,7 @@ a {
 .workout-video-page .video-wraper .workout-name-wrap .video-wrap {
   width: 100%;
   height: 75vh;
+  scale: 0.8;
 }
 
 .workout-video-page .video-wraper .workout-name-wrap .video-wrap video {
