--- a/server/app/static/css/style.scss
+++ b/server/app/static/css/style.scss
@@ -1252,7 +1252,7 @@ a {
           video {
             width: 100%;
             height: 97%;
-            object-fit: cover;
+            object-fit: contain;
           }
         }
         .btn {
