--- a/server/app/static/css/style.scss
+++ b/server/app/static/css/style.scss
@@ -738,7 +738,7 @@ a {
         video {
           width: 100%;
           height: 100%;
-          object-fit: cover;
+          object-fit: contain;
         }
       }
       .btn {
