--- a/server/app/static/css/style.css
+++ b/server/app/static/css/style.css
@@ -889,8 +889,8 @@ a {
 .workout-video-page .video-wraper .workout-name-wrap .video-wrap video {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-  object-fit: cover;
+  -o-object-fit: contain;
+  object-fit: contain;
 }
 
 .workout-video-page .video-wraper .workout-name-wrap .video-wrap img {
