--- a/server/app/static/css/style.css
+++ b/server/app/static/css/style.css
@@ -1504,7 +1504,7 @@ a {
     width: 100%;
     height: 97%;
     -o-object-fit: cover;
-    object-fit: cover;
+    object-fit: contain;
   }
 
   .workout-video-page .video-wraper .workout-name-wrap .video-wrap img {
