--- a/server/app/templates/profile.html
+++ b/server/app/templates/profile.html
@@ -66,6 +66,12 @@
             </button>
           </div>
         </div>
+        <div class="profile-instruction">
+          <p style="text-align: center; font-size: 16px; color: #555; margin-top: 20px;">
+            Заполните профиль, выберите уровень подготовки и нажмите "Редактировать", чтобы активировать тренировки.
+          </p>
+        </div>
+
         <div class="profile-details">`
           <ul>
             <li>
